# NxCare

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Clinician_Staff_Web_App_Feature_Architecture.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  sh.exe.stackdump
.claude/: settings.json
.claude/agents/: agent-core-dev.md  ba-analyst.md  brainstormer.md  careplan-dev.md  code-reviewer.md  data-modeler.md  db-seeder.md  debugger.md  devops.md  forecast-dev.md  frontend-ui-dev.md  history-tracker.md  intake-dev.md  journey-dev.md  judge.md  orchestrator.md  qa-test.md  security-reviewer.md  simulator-dev.md  spec-guardian.md  tech-researcher.md
.claude/commands/: deploy.md  design-system.md  implement-fr.md  review-changes.md  scaffold-feature.md  secret-scan.md  sync-context.md  test.md
.claude/ecc/: install-state.json
.claude/hooks/: check-commit-msg.sh  guard-main-commit.sh  protect-secrets.sh  remind-push.sh
.claude/rules/: 00-overview.md  ai-governance.md  code-quality.md  coding-standards.md  conventional-commits.md  data-model.md  frontend.md  git-workflow.md  ip-compliance.md  model-policy.md  performance.md  security-privacy.md  tech-stack.md  testing.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 6578d1fee0c9_adr_003_ticketed_queue_department_.py  8e2bd623bc0e_add_password_login_columns_to_patients_.py  a3a9a1c7715a_baseline_schema_from_orm_metadata.py
docs/: README.md  proposal.md
docs/architecture/: system-overview.md
docs/context/: business-rules.md  glossary.md  known-issues.md  tool-changelog.md
docs/requirements/: Core.md  PRD-FR-12-patient-mobile-app.md
docs/specs/: 01-overview.md  02-stakeholders.md  03-glossary.md  04-business-flows.md  05-functional-requirements.md  (+9 more)
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  design-tokens.json  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
pitch-deck/: nxcare-deck.html
scripts/: check_llm.py  demo_careplan_flow.py  run_backend.sh  run_frontend.sh
tests/: seed_live_db.py  test_agent_core.py  test_audit_pii.py  test_auth.py  test_careplan_events.py  test_careplan_gate.py  test_careplan_generation.py  test_careplan_orders.py  test_careplan_proceed_route.py  test_careplan_routes.py  test_careplan_routing.py  test_careplan_sequencing.py  test_careplan_slots.py  test_consult_desk.py  test_consult_outcome.py  test_coordinator_api.py  test_coordinator_disruption.py  test_demo_state.py  test_evaluation.py  test_events.py  test_forecast.py  test_intake.py  test_intake_arrival.py  test_intake_arrival_api.py  test_journey.py  test_journey_llm.py  test_models.py  test_patient_routes.py  test_patient_status.py  test_simulator.py  test_sql_schema.py  test_staff_routes.py  test_state.py  test_task_completion.py  test_task_order.py  test_transitions.py
(+359 files in other folders)
