[project]
name = "vaic"
version = "0.1.0"
description = "VAIC - AI Care Pathway Coordinator (hackathon demo)"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.115",
    "openai>=1.0",
    "pocketflow>=0.0.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "pyjwt>=2.13.0",
    "redis>=5.0",
    "simpy>=4.1",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]
sql = [
    "alembic>=1.18.5",
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["vaic"]
omit = ["*/simulator/run.py"]  # thin argparse CLI wrapper, exercised via its main() test

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]
# Vendored agent tooling, not project source - it is not held to the project's lint rules.
extend-exclude = [".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's dependency-injection idiom is `param: T = Depends(...)` - evaluated once per request by
# FastAPI, not a real "mutable default argument" bug. Standard exemption for route modules.
"src/vaic/api/*.py" = ["B008"]
